hios-controls no longer collapsing on audio icons

--- a/style/app.less
+++ b/style/app.less
@@ -90,7 +90,7 @@ input[type=range]{
 #hios-full {
   right: 0;
   top: 0;
-  width: 20em;
+  width: 15em;
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
@@ -98,7 +98,7 @@ input[type=range]{
   &> .hios-artwork-container{
     flex: 1 1 30%;
     align-self: flex-start;
-    min-height: 20em;
+    min-height: 15em;
     display: flex;
     &>img.hios-artwork{
     margin: 1em;
@@ -110,7 +110,6 @@ input[type=range]{
   &> .hios-controls {
     flex: 1 0 25%;
     width: 100%;
-    // min-height: 5em;
     overflow-y: hidden;
     margin: .4em;
     padding: .3em 0;
@@ -119,13 +118,15 @@ input[type=range]{
     align-items: center;
     align-content: center;
     border: red 1px solid;
-    &>.hios-progress, .hios-playback{
-      flex: 1 1 20%;
+    &>.hios-progress, .hios-volume{
+      flex: 1 0 20%;
       width: 100%;
+      min-height: 2em;
+      &.hios-progress{
       display: flex;
       flex-flow: column nowrap;
       align-items: center;
-      min-height: 1em;
+      }
       &> input {
         flex: 1 0 50%;
       }
@@ -135,10 +136,9 @@ input[type=range]{
         display: flex;
         flex-flow: row wrap;
         justify-content: space-between;
-        // align-content: space-between;
         &> output {
           padding-top: .1em;
-          flex: 1 50%;
+          flex: 1 0 50%;
           font-size: .7em;
           color: #484848;
           &#hios-tracking-duration{
@@ -151,12 +151,11 @@ input[type=range]{
         }
       } 
     }
-    &> .hios-audio, .hios-info{
+    &> .hios-info{
       flex: 1 1 30%;
       width: 100%;
       min-height: 2em;
       text-align: center;
-      align-content: center;
       border: red solid 1px;
       &>.hios-song-title{
         font-weight: bold;
@@ -164,22 +163,24 @@ input[type=range]{
       &>.hios-song-artist{
         color: firebrick;
       }
-      & .hios-audio{
-        flex: 0 1 auto;
-        display: flex;
-        flex-flow: row wrap;
-        align-items: center;
-        padding: 2em;
-        &> i {
-          flex: 1 1 33.33%;
-          margin-top: .3em;
-          border-radius: 3px;
-        }
-      }
     }
-     
+    &> .hios-audio{
+      flex: 1 1 30%;
+      width: 100%;
+      min-height: 1em;
+      display: flex;
+      flex-flow: row wrap;
+      align-items: center;
+      justify-content: center;
+      border: red solid 1px;
+      &> i {
+        flex: 1 1 33.33%;
+        text-align: center;
+      }
+    } 
+    &>.hios-playback{
+    }  
   }
-  
 }
 #hios-track-list {
   flex: 1 1 45%;
